--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <span>O</span>
     </div>
     <div class="description">
-        <span>Aku ada hadiah spesial buat kamu, jangan nangis terus ya, love love</span>
+        <span>aku ada hadiah spesial buat kamu, jangan nangis terus ya, love you</span>
     </div>
     <div class="button">
         <button>
-            <a href="flower.html">Klik disini</a>
+            <a href="flower.html">ambil</a>
         </button>
         
     </div>
